# gitv

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  config.yaml  rustfmt.toml
gitstats/: _coverpage.md  _navbar.md  _sidebar.md  gitstats.md  gitv.yaml  index.html
gitstats/static/: change-language-2018.html  change-language-2019.html  change-language-2020.html  commit-count-per-year.html  commit-day-per-year.html  commit-month-2021.html  commit-per-hour-2017.html  commit-period-2018.html  commit-period-2019.html  commit-pyecharts-2019.html  commit-total-per-year.html  commit-week-2020.html  commit-week-period-2020.html  commit-week-period-2021.html  project-created-per-year.html  tag-per-year.html
gitv-example/: gitv.yaml  go-echarts.yaml
src/: charts.rs  config.rs  executor.rs  fetcher.rs  git_binary.rs  git_impl.rs  gitbinary.rs  gitimp.rs  gitimpl.rs  gitter.rs  gitter_binary.rs  main.rs  query.rs  query_executor.rs  query_functions.rs  record.rs  record_csv.rs  register_functions.rs  register_udf.rs  render.rs  render_graph.rs  repo_fetcher.rs  repo_github.rs  repo_syncer.rs  shell.rs
static/: chart.tpl  chart.tpl.html  colors.yaml  functions.yaml  gitv.default.yaml  gitv.example.yaml
