[package]
name = "gitv"
version = "0.1.0"
edition = "2021"
authors = ["chenjiandongx <chenjiandongx@qq.com>"]
homepage = "https://github.com/chenjiandongx/gitv"
repository = "https://github.com/chenjiandongx/gitv"
license = "MIT/Apache-2.0"
readme = "README.md"

[[bin]]
name = "gitv"
path = "src/main.rs"

[dependencies]
anyhow = "1"
regex = "1"
lazy_static = "1"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
datafusion = "6"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
serde_yaml = "0.8"
async-trait = "0.1"
async-process = "1"
chrono = "0.4"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
humantime = "2"
clap = { version = "3.1.5", features = ["derive"] }
tracing = "0.1.31"
tracing-appender = "0.2.1"
tracing-subscriber = { version = "0.3.9" }
rustyline = { version = "9" }
dirs = "4.0"
tera="1"
rand = "0.8"
