[package]
authors = ["chenjiandongx <chenjiandongx@qq.com>"]
edition = "2021"
homepage = "https://github.com/chenjiandongx/gitv"
keywords = ["git", "visualization", "stats", "analyze", "tool"]
desciption = "A git repos analyzing and visualizing tool built in Rust."
license = "MIT/Apache-2.0"
name = "gitv"
readme = "README.md"
repository = "https://github.com/chenjiandongx/gitv"
version = "0.1.0"

[[bin]]
name = "gitv"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
csv = "1"
datafusion = "7"
dirs = "4"
humantime = "2"
lazy_static = "1"
num_cpus = "1"
rand = "0.8"
regex = "1"
rustyline = "9"
serde_json = "1"
serde_yaml = "0.8"
tera = "1"
tokei = "12"
tokio = "1"

[dependencies.reqwest]
features = ["json"]
version = "0.11"

[dependencies.clap]
features = ["derive"]
version = "3.1.5"

[dependencies.serde]
features = ["derive"]
version = "1"
